force-app/main/default/objects/ERPProductListing__c/ERPProductListing__c.object-meta.xml
<CustomObject>
    <label>ERP Product Listing</label>
    <nameField>
        <displayFormat>PL-{000000}</displayFormat>
        <label>ERP Product Listing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Product Listings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>