force-app/main/default/objects/ERPProductListing__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ERP Product Listings</relationshipLabel>
    <relationshipName>ERP_Product_Listings</relationshipName>
    <type>Lookup</type>
</CustomField>