force-app/main/default/objects/ERPProductListing__c/fields/ERPCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>ERPCustomerNumber__c</fullName>
    <label>ERP Customer Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>