force-app/main/default/objects/ERPProductListing__c/fields/ERPMaterialNumber__c.field-meta.xml
<CustomField>
    <fullName>ERPMaterialNumber__c</fullName>
    <label>ERP Material Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>