force-app/main/default/objects/ERPProductListing__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>ERP Product Listings</relationshipLabel>
    <relationshipName>ERP_Product_Listings</relationshipName>
    <type>Lookup</type>
</CustomField>