force-app/main/default/objects/ERPProductListing__c/fields/ValidFrom__c.field-meta.xml
<CustomField>
    <fullName>ValidFrom__c</fullName>
    <label>Valid From</label>
    <type>DateTime</type>
</CustomField>