force-app/main/default/objects/ERPProductListing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>ERPCustomerNumber__c</columns>
    <columns>Product__c</columns>
    <columns>ERPMaterialNumber__c</columns>
    <columns>ValidFrom__c</columns>
    <columns>ValidTo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>